delete int add method